k8s/infrastructure/network/policies/argocd/allow-argocd-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-server-access
  labels:
    policy-type: argocd-audit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  description: "Allow ArgoCD server access"
  ingress:
  - fromEntities:
    - host
    - remote-node
    - ingress
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kubechecks
        app.kubernetes.io/name: kubechecks
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
        app.kubernetes.io/name: argocd-redis
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
    toPorts:
    - ports:
      - port: "8081"
        protocol: TCP
      - port: "5556"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
      - port: "443"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
